--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -69,7 +69,7 @@ body {
 	height: 100%;
 	min-height: 50vh;
 	background: rgba(255, 255, 255, 1);
-	/* font-family: lato; */
+	font-family: lato;
 	margin-left:auto; margin-right:auto; margin-top:0; margin-bottom:0;
 	padding-left: 2rem; padding-right: 2rem;
 	padding-top: 2rem; padding-bottom: 10rem;
