--- a/app/views/properties/_property_form.html.erb
+++ b/app/views/properties/_property_form.html.erb
@@ -14,6 +14,6 @@
 	<br>
 	<br>
 	<%= f.submit "Search", class: "button_create" %>
-	<%= link_to "Cancel", login_path, class: "button_cancel" %>
+	<%= link_to "Cancel", user_path(@current_user), class: "button_cancel" %>
 	<br>
 <% end %>
